--- a/Frontend/src/app/main/main.component.html
+++ b/Frontend/src/app/main/main.component.html
@@ -1,1 +1,11 @@
-<p>work!!!!</p>
+<app-nav-bar></app-nav-bar>
+<div class="container">
+    <div class="row" style="margin-top: 50px; background: white;">
+        <div class="col-md-6">
+            <app-map></app-map>
+        </div>
+        <div class="col-md-6">
+
+        </div>
+    </div>
+</div>
