--- a/Frontend/src/app/main/map/map.component.html
+++ b/Frontend/src/app/main/map/map.component.html
@@ -3,19 +3,19 @@
   [longitude]="lng"
   [zoom] = 12>
   <agm-circle
-    (circleClick) = "create_temp_mark($event)"
+    (circleClick) = "recive_mark_location($event)"
+    (dragEnd) = "getIssuesDrag($event)"
+    (radiusChange) = "postIssuesRadius($event)"
     [latitude]="lat" 
     [longitude]="lng" 
     [radius]="5000"
     [fillColor]="'red'"
     [circleDraggable]="true"
     [editable]="true">
-
-
   </agm-circle>
   <agm-marker
-  *ngFor = "let issue of issues"
-  [latitude]="issue.lat" 
-  [longitude]="issue.long">
-</agm-marker>
+      *ngFor = "let issue of issues"
+      [latitude]="issue.lat" 
+      [longitude]="issue.long">
+  </agm-marker>
 </agm-map>
