--- a/Frontend/src/app/main/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/main/nav-bar/nav-bar.component.html
@@ -9,7 +9,10 @@
         <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/">Settings</a>
+        <a class="nav-link" routerLink="/">Posts</a>
+      </li>
+      <li class="nav-item">
+        <a *ngIf="userState=='admin'"class="nav-link" routerLink="/">Admin</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/" (click)="logOut()">Log out</a>
