--- a/Frontend/src/app/main/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/main/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/">Posts</a>
+        <a class="nav-link" routerLink="/posts">Posts</a>
       </li>
       <li class="nav-item">
         <a *ngIf="userState=='admin'"class="nav-link" routerLink="/">Admin</a>
