Frontend: Fixed form from Home + Issues show

--- a/Frontend/src/app/main/issue/issue.component.html
+++ b/Frontend/src/app/main/issue/issue.component.html
@@ -33,5 +33,6 @@
 
   <!-- IMG -->
 
-  <button type="submit" class="btn btn-primary" [disabled]='!rForm.valid'>Add Button</button>
+  <button type="submit" class="btn btn-primary" [disabled]='!rForm.valid'>Add Issue
+  </button>
 </form>
