--- a/Frontend/src/app/posts-list/post/post.component.html
+++ b/Frontend/src/app/posts-list/post/post.component.html
@@ -1,4 +1,49 @@
 <div id="post-container">
+  <div class="row">
+    <div class="col-md-3">
+        <h4 style="display: inline-block">{{issue.email}}</h4>
+    </div>
+    <div class="col-md-6"></div>
+    <div class="col-md-3">
+        <div *ngIf = "user.user_state!='default'">
+            
+            <button *ngIf="isOwner" type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Edit Post</button>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="form-group">
+                          <label for="recipient-name" class="col-form-label">Title</label>
+                          <input value="{{issue.title}}" name="first" type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                          <label for="message-text" class="col-form-label">Description:</label>
+                          <input value="{{issue.description}}" name="first" type="text" class="form-control" id="recipient-name">
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button  type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                      <button (click)="test()" type="button" class="btn btn-primary">Update Post</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+            <div *ngIf="!isOwner" class="btn btn-danger form-control" data-toggle="modal" data-target="#exampleModal">Report Post</div>
+        </div>
+    </div>
+  </div>
+  
+  <hr>
   <h4>{{issue.title}}</h4>
   <h6 style="word-wrap: break-word; color: grey">{{issue.description}}</h6>
 
@@ -16,26 +61,13 @@
   <br>
   <div class="input-group input-group-sm">
     <span class="input-group-addon" id="sizing-addon2">Latitude</span>
-    <input type="text" class="form-control" [value]=issue.lat>  
+    <input type="text" class="form-control" [value]=issue.lat disabled=true>  
   </div>
   <div class="input-group input-group-sm">
     <span class="input-group-addon" id="sizing-addon2">Latitude</span>
     <input type="text" class="form-control" [value]=issue.long disabled=true>  
   </div>
   <br>
-  <div>
-      <div class="row">
-        <div class="col-md-5">
-          <div (click)="voteUp()"class="btn btn-success form-control">Up vote</div>
-        </div> 
-        <div class="col-md-2">
-            <h4 style="text-align: center">{{issue.upVotes-issue.downVotes}}</h4>
-        </div>
-        <div class="col-md-5">
-          <div class="btn btn-danger form-control">Down vote</div>
-        </div>
-      </div>
-  </div>
+
   <hr>
-  <br>
 </div>
